// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TransfersOfCareDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "transferOfCarePanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="transferOfCarePanel"
      title="Transfer of Care"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    From (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    To (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Date of Transfer
              </label>
              <div
                className="form-control-static"
              >
                25-Nov-2017
              </div>
            </div>
            <RecordsOfTableView />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Reason for contact
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Clinical Summary
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    03-Oct-2017
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TransfersOfCareDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "transferOfCarePanel": true,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="transferOfCarePanel"
      title="Edit Transfer of Care"
    >
      <ReduxForm
        detail={
          Object {
            "clinicalSummary": "Review",
            "dateCreated": 1495704408641,
            "from": "Worcester Trust",
            "reasonForContact": "Testing TOC",
            "records": Array [
              Object {
                "sourceId": "0318e94e-1803-46fe-a92a-647eca029323",
                "type": "diagnosis",
                "undefined": "Diagnosis",
              },
              Object {
                "sourceId": "3a994bec-2f41-4dc0-aae6-f7e69e573f7a",
                "type": "events",
                "undefined": "Events",
              },
            ],
            "source": "qewdDB",
            "sourceId": "ae7b874e-3133-4700-a650-2b016ad7b05f",
            "to": "Oxford NHS Trust",
            "transferDateTime": "2017-05-25T09:25:33.026Z",
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TransfersOfCareDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "transferOfCarePanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="transferOfCarePanel"
      title="Transfer of Care"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    From (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Worcester Trust
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    To (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Oxford NHS Trust
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Date of Transfer
              </label>
              <div
                className="form-control-static"
              >
                25-May-2017
              </div>
            </div>
            <RecordsOfTableView
              records={
                Array [
                  Object {
                    "sourceId": "0318e94e-1803-46fe-a92a-647eca029323",
                    "type": "diagnosis",
                    "undefined": "Diagnosis",
                  },
                  Object {
                    "sourceId": "3a994bec-2f41-4dc0-aae6-f7e69e573f7a",
                    "type": "events",
                    "undefined": "Events",
                  },
                ]
              }
            />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Reason for contact
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Testing TOC
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Clinical Summary
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Review
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-May-2017
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    qewdDB
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TransfersOfCareDetail /> should renders with props correctly 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "transferOfCarePanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="transferOfCarePanel"
      title="Transfer of Care"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    From (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    To (Site / Org)
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Date of Transfer
              </label>
              <div
                className="form-control-static"
              >
                01-Feb-2018
              </div>
            </div>
            <RecordsOfTableView />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Reason for contact
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Clinical Summary
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    01-Feb-2018
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
